# F1-Web-Server

./: .gitignore  .gitmodules  Dockerfile  manage.py  pyproject.toml  readme.md
f1_analytics/: events_drivers.py  output.html  urls.py  views.py
f1_web_server/: asgi.py  settings.py  urls.py  wsgi.py
jstoolchain/: package-lock.json  package.json  tailwind.config.js
templates/analytics/: compounds_boxplot.html  compounds_lineplot.html  index.html  lap_times.html  tyre_usage.html
visualizations/: data_transformation.py  visualizations.py
