[tool.poetry]
name = "f1_web_server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
numpy = "^1.23.2"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
fastf1 = "^2.2.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
